updated after testing in wave

--- a/explore.html
+++ b/explore.html
@@ -40,7 +40,7 @@
                 <section class="kids">
                     <section class="card large">
                         <div class="card-image-container large">
-                            <img src="./assets/billetto-editorial-334686.jpg" alt="">
+                            <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
                         </div>
                         <h3>Are you a young person looking to learn more about science? </h3>
                         <p>Come on down to our museum, there's plenty to see and do.</p>
@@ -72,7 +72,7 @@
                 <h2>Researchers</h2>
                 <section class="card researchers">
                     <div class="card-image-container large">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
+                        <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                     </div>
                     <div class="card-vertical">
                         <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
