--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             <div class="scroll-container">
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
+                        <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
                     </div>
                     <h3>Night at the museum</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
+                        <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                     </div>
                     <h3>Energetica exhibitions</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/celso-405219.jpg" alt="Image of the moon">
+                        <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
                     </div>
                     <h3>Professor of Aeronautics</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="explore-card">
                     <div class="explore-card-image-container">
-                        <img src="./assets/mavis-cw-164128.jpg" alt="Image of a museum hall with study desks">
+                        <img src="./assets/mavis-cw-164128.jpg" alt="Museum hall with study desks">
                     </div>
                     <a href="explore.html" class="cta-button">Researchers</a>
                 </div>
@@ -112,28 +112,28 @@
             <div class="scroll-container">
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/toa-heftiba-412579.jpg" alt="Image of a dinosaur skeleton in a big museum hall">
+                        <img src="./assets/toa-heftiba-412579.jpg" alt="Dinosaur skeleton in a big museum hall">
                     </div>
                     <h3>Evolution</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/andrew-ruiz-348421.jpg" alt="Image of an astronaut in a spaceship">
+                        <img src="./assets/andrew-ruiz-348421.jpg" alt="Astronaut in a spaceship">
                     </div>
                     <h3>Cosmology</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/samuel-zeller-113381.jpg" alt="Image of a human anatomy figure">
+                        <img src="./assets/samuel-zeller-113381.jpg" alt="Human anatomy figure">
                     </div>
                     <h3>Biology & Medicine</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                 </section>
                 <section class="card">
                     <div class="card-image-container">
-                        <img src="./assets/william-bout-264826.jpg" alt="Image of an art exhibition illustrating a network">
+                        <img src="./assets/william-bout-264826.jpg" alt="Art exhibition illustrating a network">
                     </div>
                     <h3>Robotics & AI</h3>
                     <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
@@ -161,10 +161,10 @@
                 <p>0459 Oslo</p>
                 <div class="map-container">
                     <div class="map-container-img-mobile">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno" width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno" width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="map-container-img-desktop">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>  
             </section>
