--- a/tickets.html
+++ b/tickets.html
@@ -89,7 +89,7 @@
                 <div class="flex">
                     <section class="card">
                         <div class="card-image-container">
-                            <img src="./assets/roberto-nickson-396152.jpg" alt="Image of a mammut in a museum">
+                            <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
                         </div>
                         <h3>Night in the museum</h3>
                         <h4>Desember 20 2024</h4>
@@ -141,7 +141,7 @@
                     </section>
                     <section class="card">
                         <div class="card-image-container">
-                            <img src="./assets/celso-405219.jpg" alt="Image of the moon">
+                            <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
                         </div>
                         <h3>Professor of aeronautics</h3>
                         <h4>Desember 13 2024</h4>
@@ -193,7 +193,7 @@
                     </section>
                     <section class="card">
                         <div class="card-image-container">
-                            <img src="./assets/scientific-2040795_1280.jpg" alt="Image of a scientist looking at a reactor">
+                            <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                         </div>
                         <h3>Energetica Exhibition on Loan</h3>
                         <h4>Desember 15 2024</h4>
