--- a/visit.html
+++ b/visit.html
@@ -38,7 +38,7 @@
            <h1>Visit</h1>
            <section class="museum-info">
                 <div class="card museum">
-                    <img src="./assets/scott-webb-102825.jpg" alt="Image of a colorfull museumsign">
+                    <img src="./assets/scott-webb-102825.jpg" alt="Colorfull museum sign">
                 </div>
                 <div class="museum-info__text">
                     <section class="info">
@@ -63,7 +63,7 @@
                 <h2>Guided tours</h2>
                 <div class="guided-tours">
                     <div class="card-image-container">
-                        <img src="./assets/exhibition-1863344_1920.jpg" alt="Image of a museum hall with exhibitions">
+                        <img src="./assets/exhibition-1863344_1920.jpg" alt="Museum hall with exhibitions">
                     </div>
                     <div class="text">
                         <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
@@ -95,10 +95,10 @@
                 </div>
                 <div class="map-container">
                     <div class="map-container-img-mobile">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno" width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317143501!5m2!1sno!2sno" width="343" height="343" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="map-container-img-desktop">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe title="Interactive google maps of Noroff Oslo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15993.071819449991!2d10.755959!3d59.929919!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e625bebdd55%3A0x87598940160b87fa!2sNoroff%20Oslo!5e0!3m2!1sno!2sno!4v1733317432426!5m2!1sno!2sno" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>  
             </section>
