--- a/exhibitions.html
+++ b/exhibitions.html
@@ -40,18 +40,18 @@
                 <section class="card large">
                     <h2>Cosmology</h2>
                     <div class="card-container-image medium">
-                        <img src="./assets/celso-405219.jpg" alt="Image of the moon">
+                        <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
                     </div>
                     <p>Explore the wonders of our cosmos. Our fantastic exhibition, "The Sky Above Us", explores the night sky and what we can see and know about the universe around us. We'll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
                     <div class="card-container-image medium">
-                        <img src="./assets/andrew-ruiz-348421.jpg" alt="Image of an astronaut in a spaceship">
+                        <img src="./assets/andrew-ruiz-348421.jpg" alt="An astronaut in a spaceship">
                     </div>
                     <p>Follow the journey of our solar exploration: from early Arab traders, to Galileo's telescope, to the latest exploration of the planets in our solar system.</p>
                 </section>
                 <section class="card large">
                     <h2>Evolution</h2>
                     <div class="card-container-image large">
-                        <img src="./assets/toa-heftiba-412579.jpg" alt="Image of a dinosaur skeleton in a big museum hall">
+                        <img src="./assets/toa-heftiba-412579.jpg" alt="A dinosaur skeleton in a big museum hall">
                     </div>
                     <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.</p>
                     <p>Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn't survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
@@ -60,12 +60,12 @@
             <section class="card x-large">
                 <h2>Biology & Medicine</h2>
                 <div class="card-container-image x-large-img">
-                    <img src="./assets/samuel-zeller-113381.jpg" alt="Image of a human anatomy figure">
+                    <img src="./assets/samuel-zeller-113381.jpg" alt="A human anatomy figure">
                 </div>                
                 <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.</p>
                 <p>For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.</p>
                 <div class="card-container-image x-large-img">
-                    <img src="./assets/people-219985_1280.jpg" alt="Image of a man looking into a microskope">
+                    <img src="./assets/people-219985_1280.jpg" alt="A man looking into a microskope">
                 </div>
                 <p>Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.</p>
             </section>
@@ -73,7 +73,7 @@
                 <section class="card large">
                     <h2>Robotics and AI</h2>
                     <div class="card-container-image large">
-                        <img src="./assets/william-bout-264826.jpg" alt="Image of an art exhibition illustrating a network">
+                        <img src="./assets/william-bout-264826.jpg" alt="Art exhibition illustrating a network">
                     </div>
                     <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.</p>
                 </section>
