Added aria label to ticket count

--- a/tickets.html
+++ b/tickets.html
@@ -52,9 +52,9 @@
                             <td>Free</td>
                             <td>
                                 <div class="qty-container">
-                                <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                <input type="number" class="qty-count" min="0" value="0" step="1">
-                                <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                    <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                 </div>
                             </td>
                         </tr>
@@ -63,9 +63,9 @@
                             <td>$5</td>
                             <td>
                                 <div class="qty-container">
-                                <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                <input type="number" class="qty-count" min="0" value="0" step="1">
-                                <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                    <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                 </div>
                             </td>
                         </tr>
@@ -74,9 +74,9 @@
                             <td>$10</td>
                             <td>
                                 <div class="qty-container">
-                                <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                <input type="number" class="qty-count" min="0" value="0" step="1">
-                                <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                    <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                    <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                    <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                 </div>
                             </td>
                         </tr>
@@ -107,9 +107,9 @@
                                     <td>Free</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -118,9 +118,9 @@
                                     <td>$5</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -129,9 +129,9 @@
                                     <td>$10</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -159,9 +159,9 @@
                                     <td>Free</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -170,9 +170,9 @@
                                     <td>$5</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -181,9 +181,9 @@
                                     <td>$10</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -211,9 +211,9 @@
                                     <td>Free</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -222,9 +222,9 @@
                                     <td>$5</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -233,9 +233,9 @@
                                     <td>$10</td>
                                     <td>
                                         <div class="qty-container">
-                                        <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
-                                        <input type="number" class="qty-count" min="0" value="0" step="1">
-                                        <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
+                                            <button type="button" class="qty-count-minus" onclick="this.nextElementSibling.stepDown()">-</button>
+                                            <input type="number" class="qty-count" min="0" value="0" step="1" aria-label="Quantity">
+                                            <button type="button" class="qty-count-plus" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </td>
                                 </tr>
