--- a/contact-us.html
+++ b/contact-us.html
@@ -40,8 +40,8 @@
                 <h2>We're here to help!</h2>
                 <p>Got questions, need support, or want to share feedback? Reach out to us anytime—we'd love to hear from you!</p>
                 <p>Email: community.science.museum@museum.com</p>
-                <p>Facebook: <a href="www.facebook.com">Facebook</a></p>
-                <p>Instagram:<a href="www.instagram.com">Instagram</a></p>
+                <p>Facebook: <a href="https://facebook.com">Facebook</a></p>
+                <p>Instagram:<a href="https://instagram.com">Instagram</a></p>
                 <h3>Let's connect!</h3>
             </section>
             <form class="form">
