Cleaned up css using dry principles

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
            <h1>About us</h1>
            <section class="about__text">
                 <h2>Come join us at the Community Science Museum where we're committed to making science accessible to all.</h2>
-                <div class="about__card-container">
+                <div class="logo__image-container">
                     <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
                 </div>
                 <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
