--- a/check-out-success.html
+++ b/check-out-success.html
@@ -38,7 +38,7 @@
             <h1>Checkout success</h1>
             <h2>Order number: #12345</h2>
             <h2>Thank you for your order!</h2>
-            <div class="check-out__container">
+            <div class="logo__image-container">
                 <img src="./assets/open-science-735787-removebg-preview-2.png" alt="Logo of earth with a keyhole and galaxies around.">
             </div>
             <a href="order-summary.html" class="cta-button">Order summary</a>
