Updated active class on nav and nav items in footer. Moved CTA button in background image to absolute positioning to place it over the image.

--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
                 <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
                 <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
+                <a href="cart.html" class="nav-active">Cart</a>
             </nav>
         </header>
         <main> 
