--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
                 <a href="index.html">Home</a>
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibitions</a>
-                <a href="events.html">Events</a>                
+                <a href="events.html" class="nav-active">Events</a>                
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
             </nav>
