--- a/get-involved.html
+++ b/get-involved.html
@@ -50,7 +50,7 @@
         <footer>
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
-            <a href="get-involved.html">Get involved</a>
+            <a href="get-involved.html" class="nav-active">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
     </body>
