--- a/tickets.html
+++ b/tickets.html
@@ -30,7 +30,7 @@
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
-                <a href="tickets.html">Tickets</a>
+                <a href="tickets.html" class="nav-active">Tickets</a>
                 <a href="cart.html">Cart</a>
             </nav>
         </header>
