--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <title>About</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="About Community Science Museum a museum accessible to all.">
+        <meta name="description" Content="About Community Science Museum a fun and interactive museum, accessible to all.">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
         <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
            </section>
         </main>
         <footer>
-            <a href="about.html">About</a>
+            <a href="about.html" class="nav-active">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
