--- a/contact-us.html
+++ b/contact-us.html
@@ -59,7 +59,7 @@
         </main>
         <footer>
             <a href="about.html">About</a>
-            <a href="contact-us.html">Send us a message</a>
+            <a href="contact-us.html" class="nav-active">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
             <a href="visit.html">Visit</a>
         </footer>
