--- a/exhibitions.html
+++ b/exhibitions.html
@@ -28,7 +28,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="explore.html">Explore</a>
-                <a href="exhibitions.html">Exhibitions</a>
+                <a href="exhibitions.html" class="nav-active">Exhibitions</a>
                 <a href="events.html">Events</a>                
                 <a href="tickets.html">Tickets</a>
                 <a href="cart.html">Cart</a>
