--- a/explore.html
+++ b/explore.html
@@ -27,7 +27,7 @@
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="explore.html">Explore</a>
+                <a href="explore.html" class="nav-active">Explore</a>
                 <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
                 <a href="tickets.html">Tickets</a>
