--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </label>
             <input type="checkbox" name="menue-checkbox" id="menue-checkbox">
             <nav>
-                <a href="index.html">Home</a>
+                <a href="index.html" class="nav-active">Home</a>
                 <a href="explore.html">Explore</a>
                 <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
