--- a/order-summary.html
+++ b/order-summary.html
@@ -31,7 +31,7 @@
                 <a href="exhibitions.html">Exhibitions</a>
                 <a href="events.html">Events</a>                
                 <a href="tickets.html">Tickets</a>
-                <a href="cart.html">Cart</a>
+                <a href="cart.html" class="nav-active">Cart</a>
             </nav>
         </header>
         <main> 
