--- a/visit.html
+++ b/visit.html
@@ -107,7 +107,7 @@
             <a href="about.html">About</a>
             <a href="contact-us.html">Send us a message</a>
             <a href="get-involved.html">Get involved</a>
-            <a href="visit.html">Visit</a>
+            <a href="visit.html" class="nav-active">Visit</a>
         </footer>
     </body>
 </html>
