--- a/explore.html
+++ b/explore.html
@@ -43,7 +43,7 @@
                             <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
                         </div>
                         <h3>Are you a young person looking to learn more about science? </h3>
-                        <p>Come on down to our museum, there's plenty to see and do.</p>
+                        <h4>Come on down to our museum, there's plenty to see and do.</h4>
                         <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
                         <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
                     </section>
