--- a/tickets.html
+++ b/tickets.html
@@ -195,7 +195,7 @@
                         <div class="card-image-container">
                             <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                         </div>
-                        <h3>Energetica Exhibition on Loan</h3>
+                        <h3>Energetica Exhibition</h3>
                         <h4>Desember 15 2024</h4>
                         <table>
                             <thead>
