Updated width cart

--- a/explore.html
+++ b/explore.html
@@ -63,6 +63,7 @@
             <section>
                 <h2>Teachers</h2>
                 <section class="card teachers">
+                    <h3>Bring Learning to Life with Our School Programs</h3>
                     <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
                     <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
                     <a href="contact-us.html" class="cta-button">Contact us</a>
@@ -75,6 +76,7 @@
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                     </div>
                     <div class="card-vertical">
+                        <h3>Collaborate with Our Researchers and Academics</h3>
                         <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
                         <a href="contact-us.html" class="cta-button">Contact us</a>
                     </div>
