Changed CTA button header

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span>museum</span>
                 </h1>  
             </section>
-            <a href="visit.html" class="cta-button__header">Visit us</a>
+            <a href="explore.html" class="cta-button__header">Go exploring</a>
             <section class="slogan">
                 <h2>Discover Hands-On Fun and Science Together!</h2>
             </section>
@@ -67,7 +67,7 @@
                     <div class="card-image-container">
                         <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
                     </div>
-                    <h3>Night at the museum</h3>
+                    <h3>Night in the museum</h3>
                     <a href="events.html" class="cta-button">Go to events</a>
                 </section>
                 <section class="card">
