--- a/tickets.html
+++ b/tickets.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tickets</title>
         <meta charset="UTF-8">
-        <meta name="description" Content="Tickets">
+        <meta name="description" Content="Buy tickets for our events.">
         <meta name="viewport" Content="width=device-width, initial-scale=1">
         <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
