--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 <h2>Explore</h2>
                 <div class="explore-card">
                     <div class="explore-card-image-container">
-                        <img src="./assets/learn-2405206_1920.jpg" alt="">
+                        <img src="./assets/learn-2405206_1920.jpg" alt="Girl looking at a mathematic equation">
                     </div>
                     <a href="explore.html" class="cta-button">Kids</a>
                 </div>
                 <div class="explore-card">
                     <div class="explore-card-image-container">
-                        <img src="./assets/lab-512503_1920.jpg" alt="">
+                        <img src="./assets/lab-512503_1920.jpg" alt="Lab equipment for a science project">
                     </div>
                     <a href="explore.html" class="cta-button">Teachers</a>
                 </div>
